# linear_logistic_regression_gpu

./: .gitignore  readme
linear_reg/: CMakeLists.txt  clean.sh  lr.cu
logistic_reg/: CMakeLists.txt  clean.sh  lgr.cu
src/: CMakeLists.txt  lr.cu
